removed comments not needed + fixed some spacing

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,11 +1,3 @@
-/* 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
-} denna finns redan i main.css */
-
 /* STYLING FOR MODAL CONTENT BOX */
 
 #content {
@@ -39,11 +31,11 @@ h4 {
     text-shadow: 1px 1px whitesmoke;
 }
 
-/* lade till en #content p istället för p för att inte överskrida alla andra p-stylingar */
 #content p { 
     font-weight: 600;
 }
- /* Styling for ok button */
+
+/* Styling for ok button */
 #btnMsg {
     background-color: #f3f3f3;
     margin-top: 10px;
